2002-05-16  Jody Goldberg <jody@gnome.org>

	* libgnomevfs/gnome-vfs-application-registry.c (application_sync) :
	add some safety.  Just in case.

2002-05-16  Michael Meeks  <michael@ximian.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c
	(gnome_vfs_mime_edit_user_file_full): don't dup (leak)
	key and value.

	* modules/file-method.c (fam_callback): unref the
	URI we create.

2002-04-19  Mark McLoughlin  <mark@skynet.ie>

	* modules/http-method.c: (construct_gl_http_proxy),
	(set_proxy_auth): split these methods out from
	sig_gconf_value_changed.
	(notify_gconf_value_changed): rename from
	sig_gconf_value_changed
	(vfs_module_init): don't use gconf_init. Also use
	gconf_client_notify_add instead of the 'value-changed' signal
	on GConfClient so that we don't get notified of other user
	changes.

2002-05-15  Mark McLoughlin <mark@skynet.ie>

	* schema/system_http_proxy.schemas: set default for
	all string keys so that the PropertyEditor doesn't
	complain.

2002-05-14  Seth Nickell  <snickell@stanford.edu>

	* modules/applications.vfolder-info.in:
	* modules/preferences.vfolder-info.in:

	Tweak merging so we don't get so much crap from GNOME 1.4

2002-05-14  Jody Goldberg <jody@gnome.org>

	From ali.akcaagac@stud.fh-wilhelmshaven.de (Ali Akcaagac) 
        http://bugzilla.gnome.org/show_bug.cgi?id=80826
	* configure.in : improve FAM test.

Mon May 13 17:35:39 2002  Jonathan Blandford  <jrb@redhat.com>

	* modules/tarpet.h (TARPET_TYPE_FIFO): Modify to make match tar
	documentation better.

2002-05-13  Anders Carlsson  <andersca@gnu.org>

	* modules/applications.vfolder-info.in:
	* modules/http-method.c: (strip_semicolon), (set_content_type),
	(process_propfind_propstat):
	Always try to strip off text after the semicolon when looking
	for the mime type. Fixes #81561, reported by Rene Seindal.
	
2002-05-12  Rachel Hestilow  <hestilow@ximian.com>

	* modules/Makefile.am:
	* modules/default-modules.conf: Add tar module.

	* modules/tar-method.c:
	* modules/tarpet.h: